# scooter-mode

./: CMakeLists.txt  README.md  package.xml  scootercfg.cfg
cfg/: Tutorials.cfg  dynamic_reconfigure_scootercfg.cfg
nodes/: scooter-client  scooter.py  server.py  stm32f4client.py
