<?xml version="1.0"?>
<package>
  <name>dynamic_tutorials</name>
  <version>0.0.0</version>
  <description>The dynamic_tutorials package</description>

  <maintainer email="azhar@todo.todo">azhar</maintainer>

  <license>todo</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>

  <export>
  </export>
</package>
